--- a/views/recipes/index.erb
+++ b/views/recipes/index.erb
@@ -2,6 +2,7 @@
 
 <ul>
   <% @recipes.each do |recipe| %>
+    recipe = Recipe.new(recipe)
     <li><a href="/recipes/<%= recipe.id %>"><%= recipe.name %></a></li>
   <% end %>
 </ul>
